tests/negative/gold/unicode_test.gold
tests/negative/unicode_test.toit:6:10: error: Invalid string: '\u{FFFFFFF}'

  str := "\u{FFFFFFF}"
         ^~~~~~~~~~~~~
tests/negative/unicode_test.toit:7:9: error: Invalid string: '\u{FFFFFF}'

  str = "\u{FFFFFF}"
        ^~~~~~~~~~~~
Compilation failed.
